--- a/principal/templates/registro/index.html
+++ b/principal/templates/registro/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Registro</title>
 </head>
 <body>
-    Inicio
+    Registro
 </body>
 </html>
