--- a/empleos/templates/empleos/index.html
+++ b/empleos/templates/empleos/index.html
@@ -1,11 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Empleos</title>
-</head>
-<body>
-    Empleos
-</body>
-</html>
+{% extends "principal/base.html" %}
+
+{% load static %}
+
+{% block title %} Inicio {% endblock %}
+
+{% block content %}
+
+<div class="container">
+    <div id="blog" class="row"> 
+       </div>
+                <div class="col-md-10 blogShort">
+                    <h1 style="color:turquoise; font-weight: bold; font-style: italic;">Title 1</h1>
+                    <img src="http://www.kaczmarek-photo.com/wp-content/uploads/2012/06/guinnes-150x150.jpg" alt="post img" class="pull-left img-responsive thumb margin10 img-thumbnail">
+                    
+                        <em style="color: white;">This snippet use <a href="http://bootsnipp.com/snippets/featured/sexy-sidebar-navigation" target="_black">Sexy Sidebar Navigation</a></em>
+                    <article><p style="color: white;">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
+                        ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only 
+                        five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
+                        of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of
+                        Lorem Ipsum.    
+                        </p></article>
+                    <a class="btn btn-blog pull-right marginBottom10" href="http://bootsnipp.com/user/snippets/2RoQ">READ MORE</a> 
+                </div>
+                 <div class="col-md-10 blogShort">
+                    <h1>Title 2</h1>
+                    <img src="http://www.kaczmarek-photo.com/wp-content/uploads/2012/06/DSC_4073-150x150.jpg" alt="post img" class="pull-left img-responsive thumb margin10 img-thumbnail">
+                    <article><p style="color: white;">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
+                        ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only 
+                        five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
+                        of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of
+                        Lorem Ipsum.
+                        </p></article>
+                    <a class="btn btn-blog pull-right marginBottom10" href="http://bootsnipp.com/user/snippets/2RoQ">READ MORE</a> 
+                </div>
+                
+                 <div class="col-md-10 blogShort">
+                    <h1>Title 3</h1>
+                    <img src="http://www.kaczmarek-photo.com/wp-content/uploads/2012/06/DSC_1681-150x150.jpg" alt="post img" class="pull-left img-responsive thumb margin10 img-thumbnail">
+                    <article><p style="color: white;">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text
+                        ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only 
+                        five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
+                        of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of
+                        Lorem Ipsum.
+                        </p></article>
+                    <a class="btn btn-blog pull-right marginBottom10" href="http://bootsnipp.com/user/snippets/2RoQ">READ MORE</a> 
+                </div>
+                
+              <div class="col-md-12 gap10"></div>
+            </div>
+</div>
+
+{% endblock %}
