--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <br>
-<div class="container p-3 mb-2 bg-success text-white w-25 p-3">
+<div class="container p-3 mb-2 bg-success text-white w-25 p-3 rounded" >
 <h1>Autenticación</h1>
 
 <form action="" method="POST">
