--- a/principal/static/principal/css/gestion.css
+++ b/principal/static/principal/css/gestion.css
@@ -12,7 +12,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Raleway';
+  font-family: 'Raleway'; 
 }
 
 p {
@@ -228,11 +228,16 @@ p {
   font-size: 1.2rem;
 }
 
-.footer {
+.footer
+{
    background-color: rgba(24, 64, 8, 0.8);
 }
 
-
+.entrada
+{
+   background-color: rgba(24, 64, 8, 0.8);
+   color: white;
+}
 
 .btn {
   box-shadow: 0px 3px 3px 0px rgba(33, 37, 41, 0.1);
