--- a/principal/templates/principal/base.html
+++ b/principal/templates/principal/base.html
@@ -42,7 +42,7 @@
             <a class="nav-link text-uppercase text-expanded" href="{% url 'Principal' %}">Inicio</a>
           </li>
           <li class="nav-item {% if request.path == '/articulo' %}active{% endif %} px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="{% url 'Articulos' %}">Artículos</a>
+            <a class="nav-link text-uppercase text-expanded" href="{% url 'Arts' %}">Artículos</a>
           </li>
           <li class="nav-item {% if request.path == '/empleos' %}active{% endif %} px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="{% url 'Empleos' %}">Empleos</a>
