--- a/articulos/templates/articulos/nuevo.html
+++ b/articulos/templates/articulos/nuevo.html
@@ -5,7 +5,8 @@
 {% block title %} Articulos {% endblock %}
 
 {% block content %}
-
+<br>
+<div class="container entrada w-50 rounded" ></div>
 <h2>Nuevo artículo</h2>
 
 <form action="" method="POST" enctype="multipart/form-data">
@@ -17,7 +18,7 @@
     <input type="submit" value="Agregar">
 
 </form>
-    
+</div>
 {{ mensaje }}
 
 {% endblock %}
