--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
-</head>
-<body>
-    Blog
-</body>
-</html>
+{% extends "principal/base.html" %}
+
+{% load static %}
+
+{% block title %} Servicios {% endblock %}
+
+{% block content %}
+
+Blog
+
+{% endblock %}
