--- a/contacto/templates/contacto/index.html
+++ b/contacto/templates/contacto/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
-</head>
-<body>
-    Contacto
-</body>
-</html>
+{% extends "principal/base.html" %}
+
+{% load static %}
+
+{% block title %} Servicios {% endblock %}
+
+{% block content %}
+
+Contacto0
+
+{% endblock %}
